# GCP-FastAPI

./: .gitignore  Dockerfile  main.py  pyproject.toml  runserver.py
.github/workflows/: google-cloudrun-docker.yml
