[tool.poetry]
name = "gcp-fastapi"
version = "0.1.0"
description = ""
authors = ["Julien Bessière <syntax-error@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
